# UpWorkScraper

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  profile.yaml.example  pyproject.toml
.github/workflows/: ci.yml
deploy/: Dockerfile
src/: main.py
src/ai/: __init__.py  cover_letter_generator.py  prompts.py
src/core/: __init__.py  config.py
src/filters/: __init__.py  job_filter.py
src/models/: __init__.py  filters.py  job.py  profile.py
src/pipelines/: __init__.py  excel_pipeline.py
src/spiders/: __init__.py  extraction_strategy.py  upwork_spider.py
src/utils/: __init__.py  logging.py  proxy_manager.py
tests/: conftest.py
tests/integration/: test_spider.py
tests/unit/: test_cover_letter.py  test_filters.py  test_models.py  test_parser.py
